// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TripProgressBar 1`] = `
<div>
  <div
    class="trip-progress-bar my-4"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="22.3979"
        aria-valuemin="0"
        aria-valuenow="3.9311"
        class="progress-bar"
        role="progressbar"
        style="width: 17.551%;"
      >
        2.44 mi
      </div>
    </div>
  </div>
</div>
`;

exports[`renders TripProgressBar for completed trip 1`] = `
<div>
  <div
    class="trip-progress-bar trip-progress-bar-completed my-4"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="22.3979"
        aria-valuemin="0"
        aria-valuenow="22.3979"
        class="progress-bar"
        role="progressbar"
        style="width: 100%;"
      >
        13.92 mi
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty TripProgressBar for trip not yet started 1`] = `
<div>
  <div
    class="trip-progress-bar trip-progress-bar-empty my-4"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="progress-bar"
        role="progressbar"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;
